src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Licenses</fullName>
        <description>Sales Process for Salesforce.com Licenses Opportunity</description>
        <isActive>true</isActive>
        <values>
            <fullName>Close Dropped</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Product</fullName>
        <description>For Product opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>Close Dropped</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Id%2E Decision Makers</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Services</fullName>
        <description>This is to capture Salesforce.com Services (Implementation) opportunities.</description>
        <isActive>true</isActive>
        <values>
            <fullName>Close Dropped</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Perception Analysis</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Qualification</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contract Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Id__c</fullName>
        <label>Contract Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Month__c</fullName>
        <label>Contract Term(Month)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <picklist>
            <picklistValues>
                <fullName>License Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Only</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Days_Since_Creation__c</fullName>
        <formula>NOW()  -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since Creation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Extentor_SalesRep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Extentor SalesRep</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <label>Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Partner Sourced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Sourced</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>License_Activation_Date__c</fullName>
        <inlineHelpText>Please enter the license activation date as in PO</inlineHelpText>
        <label>License Activation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Amount__c</fullName>
        <label>License Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>License_Commission__c</fullName>
        <label>License Commission</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>License_Type__c</fullName>
        <label>License Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contact Manager (CME)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Edition (GE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Edition (PE) - Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Edition (PE) - Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Edition (PE) - Chatter Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Edition (EE) - Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Edition (EE) - Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Edition (EE) - Service Cloud Knowledge Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise Edition (EE) - Chatter Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Edition (UE) - Sales Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Edition (UE) - Service Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Edition (UE) - Knowledge Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited Edition (UE) - Chatter Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Authenticated Sites</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Cloud Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Portal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com 1 App Lite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Force.com 1 App Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other...</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Licenses_Margin__c</fullName>
        <formula>Amount  -  Purchase_Price_from_Ingram__c</formula>
        <label>Licenses Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Margin_Percentage__c</fullName>
        <label>Margin Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Licenses__c</fullName>
        <label>No of Licenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Partner_Lead__c</fullName>
        <inlineHelpText>Partner Portal Lead ID</inlineHelpText>
        <label>Partner Lead #</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Project_Name__c</fullName>
        <description>The name for the Project that would start once the Opportunity is Closed-Won</description>
        <label>Proposed Project Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Price_from_Ingram__c</fullName>
        <description>Please enter our purchase price from Ingram</description>
        <inlineHelpText>Please enter our purchase price from Ingram in total</inlineHelpText>
        <label>Purchase Price from Ingram</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quote_Accepted_By_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This Is checked when quote is accepted by customer</description>
        <label>Quote Accepted By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_for_Closed_Lost__c</fullName>
        <label>Reason for Closed Lost</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_com_AE_associated__c</fullName>
        <description>Please add respective Salesforce.com AE with this opportunity.</description>
        <inlineHelpText>Please add respective Salesforce.com AE with this opportunity.</inlineHelpText>
        <label>Salesforce.com AE Associated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Amount__c</fullName>
        <label>Service Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Margin__c</fullName>
        <label>Total Margin</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>All_Closed_Won_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>INR</value>
        </filters>
        <label>All Closed Won Opportunities</label>
    </listViews>
    <listViews>
        <fullName>All_Open_Opportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>notEqual</operation>
            <value>Closed Won,Closed Lost,Close Dropped</value>
        </filters>
        <label>All Open Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Closed_Opportunity</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Closed Opportunity</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Open_Service_Opps_Closing_next_Month</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.LAST_UPDATE</columns>
        <columns>OPPORTUNITY.NEXT_STEP</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SFDC_Implementation_Services</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Proposal/Price Quote,Negotiation/Review,Closed Won</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_QUARTER</value>
        </filters>
        <label>Open Service Opps Closing next Month</label>
    </listViews>
    <listViews>
        <fullName>Open_Services_Opps_Closing_Stage</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>Proposal/Price Quote,Negotiation/Review</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CURRENCY_ISO_CODE</field>
            <operation>equals</operation>
            <value>INR</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.SFDC_Implementation_Services</value>
        </filters>
        <label>Open Services Opps Closing Stage</label>
    </listViews>
    <listViews>
        <fullName>SFDC_sourced_Opportunities</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>SFDC PL</value>
        </filters>
        <label>SFDC sourced Opportunities</label>
    </listViews>
    <recordTypes>
        <fullName>Product</fullName>
        <active>true</active>
        <businessProcess>Product</businessProcess>
        <description>To Capture Extentor Custom Product Opportunity Details</description>
        <label>Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC_Implementation_Services</fullName>
        <active>true</active>
        <businessProcess>Services</businessProcess>
        <description>To Capture Salesforce.com Implementation Services Opportunity Details</description>
        <label>SFDC Implementation Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>SFDC_Licenses</fullName>
        <active>true</active>
        <businessProcess>Licenses</businessProcess>
        <description>To Capture Salesforce.com Licenses Opportunity Details</description>
        <label>SFDC Licenses</label>
    </recordTypes>
    <validationRules>
        <fullName>Amount_Field_Can_Not_Be_Blank</fullName>
        <active>false</active>
        <description>Based upon the cost picklist selection corresponding Amount field should be filled.</description>
        <errorConditionFormula>OR( AND(ISPICKVAL(Cost__c,&apos;License Only&apos;), ISBLANK( License_Amount__c ) ),
        AND(ISPICKVAL(Cost__c,&apos;Service Only&apos;), ISBLANK(  Service_Amount__c  ) ),
         AND(ISPICKVAL(Cost__c,&apos;Both&apos;), OR(ISBLANK(  Service_Amount__c  ), ISBLANK(  License_Amount__c ) ) )


 )</errorConditionFormula>
        <errorMessage>Amount Should Be Filled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Start_Date_Can_Not_Be_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( StageName ,&apos;Closed Won&apos;),( ISBLANK( Contract_Start_Date__c ) ),ISPICKVAL(  Cost__c ,&apos;License Only&apos;))</errorConditionFormula>
        <errorMessage>Contract Start Date Is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Status_Can_Not_Be_Blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( StageName ,&apos;Closed Won&apos;),( ISBLANK( TEXT( Status__c )  )),ISPICKVAL(  Cost__c ,&apos;License Only&apos;))</errorConditionFormula>
        <errorMessage>Status Is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Contract_Term_Months_can_not_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( StageName ,&apos;Closed Won&apos;),ISPICKVAL(  Cost__c ,&apos;License Only&apos;),( ISBLANK(  Contract_Term_Month__c ) ))</errorConditionFormula>
        <errorMessage>Contract Term(Month) Is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Quote_should_be_accepted_by_customer</fullName>
        <active>false</active>
        <errorConditionFormula>AND(  ISPICKVAL( StageName ,&apos;Closed Won&apos;), Quote_Accepted_By_Customer__c ==false  ,ISPICKVAL(  Cost__c ,&apos;License Only&apos;))</errorConditionFormula>
        <errorMessage>Quote should be accepted by customer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Should_Be_Filled_When_Closed_Lost</fullName>
        <active>false</active>
        <description>Reason to be filled when moving opportunity to Closed Lost</description>
        <errorConditionFormula>AND(ISPICKVAL( StageName ,&apos;Closed Lost&apos;), ISBLANK( Reason_for_Closed_Lost__c ) )</errorConditionFormula>
        <errorMessage>Please fill the reason for Closed/Lost</errorMessage>
    </validationRules>
</CustomObject>